feat: enable mixed models for the default LS moves